fix(filter): SKFP-1190 fix apply button alignment

--- a/packages/ui/src/components/filters/CheckboxFilter/CheckboxFilter.module.css
+++ b/packages/ui/src/components/filters/CheckboxFilter/CheckboxFilter.module.css
@@ -65,6 +65,7 @@
 .fuiCbfActions > * {
   text-transform: capitalize;
   margin-left: 8px !important;
+  width: auto;
 }
 
 .filterSearchWrapper {
